CMDB-1575 - Implement a auido player component, playing specified audio when the given condition occurs
git-svn-id: http://www.ifountain.org/repos/os/RapidModules@7618 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RapidUiPlugin/web-app/help/uidesigner/Components.html
+++ b/RapidUiPlugin/web-app/help/uidesigner/Components.html
@@ -16,7 +16,8 @@
 	<li><b>Add PieChart</b>: Adds a pie chart component</li>
 	<li><b>Add ObjectMap</b>: Adds a map component to display objects in a diagram of connected nodes</li>
 	<li><b>Add Autocomplete</b>: Adds an autocomplete component</li>
-	<li><b>Add GMap</b>: Adds a Google map component</li>
+    <li><b>Add AudioPlayer</b>: Adds an AudioPlayer component</li>
+    <li><b>Add GMap</b>: Adds a Google map component</li>
 	<li><b>Add Timeline</b>: Adds a timeline component</li>
 </ul>
 
