git-svn-id: http://www.ifountain.org/repos/os/RapidModules@7765 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RapidUiPlugin/web-app/help/uidesigner/LinkAction.html
+++ b/RapidUiPlugin/web-app/help/uidesigner/LinkAction.html
@@ -23,6 +23,7 @@ This is what we need to write as the condition Javascript expression:
 </div></div>
 <p>The action will be executed only when this expression return true.</p></li>
 </ul>
+<p><b>target</b>: Specifies where to open the linked document.</p>
 
 
 <h4><a name="LinkAction-AvailableActions"></a>Available Actions</h4>
