CMDB-1639 - The label of search button in autocomplete should be configurable
git-svn-id: http://www.ifountain.org/repos/os/RapidModules@7966 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RapidUiPlugin/web-app/help/uidesigner/Autocomplete Component.html
+++ b/RapidUiPlugin/web-app/help/uidesigner/Autocomplete Component.html
@@ -23,7 +23,8 @@ Autocomplete component provides the functionality for text-entry suggestion and 
 
 <h4><a name="AutocompleteComponent-AdditionalProperties"></a>Additional Properties</h4>
 
-<p><b>cacheSize</b> (Optional): Max number of data stored in client side cache. Default is 0.<br/>
+<p><b>submitButtonLabel</b> (Optional): Submit button text. Default is "Search".<br/>
+<b>cacheSize</b> (Optional): Max number of data stored in client side cache. Default is 0.<br/>
 <b>animated</b> (Optional): Parameter to display suggestion box whether animated or not. Default is "false".<br/>
 <b>timeout</b> (Optional): The time interval in seconds to wait the server request completes successfully before aborting.</p>
 
