--- a/RapidUiPlugin/web-app/help/uidesigner/SearchList Component.html
+++ b/RapidUiPlugin/web-app/help/uidesigner/SearchList Component.html
@@ -17,7 +17,8 @@ SearchList is a UI component designed to represent tabular row data. It enables 
 <b>offsetAttribute</b> (Required): The attribute in the root node of the AJAX response which shows where the results starts from according to the search query. ex: "offset" for the sample data below<br/>
 <b>sortOrderAttribute</b> (Required): The attribute of the row which displays the sort position of the row according to the search query. ex: "sortOrder" for the sample data below<br/>
 <b>pollingInterval</b> (Optional): Time delay between two server requests. Default is 0 which means there is no polling.<br/>
-<b>queryParameter</b> (Required): The url parameter to send the query to the server. The value of this property depends on your implementation for the server side code implemented for the "url" property above.</p>
+<b>queryParameter</b> (Required): The url parameter to send the query to the server. The value of this property depends on your implementation for the server side code implemented for the "url" property above.<br/>
+<b>searchInEnabled</b> (Required): Determines if the query should be applied on only defaultSearchClass or should be selected among classes which are brought by searchClassesUrl.</p>
 <div class='panelMacro'><table class='infoMacro'><colgroup><col width='24'><col></colgroup><tr><td valign='top'><img src="images/icons/emoticons/information.gif" width="16" height="16" align="absmiddle" alt="" border="0"></td><td>All properties except rootTag, contentPath and keyAttribute are pre-populated when a new SearchList component is added to the layout, assuming you will be using SearchController provided with RapidInsight.</td></tr></table></div>
 <p>Below is the sample Ajax response in Xml format to a url call:</p>
 <div class="code panel" style="border-width: 1px;"><div class="codeContent panelContent">
@@ -30,7 +31,9 @@ SearchList is a UI component designed to represent tabular row data. It enables 
 
 <h4><a name="SearchListComponent-AdditionalProperties"></a>Additional Properties</h4>
 
-<p><b>defaultFields</b> (Optional if showMax property is provided): Properties list that will be shown when no field configuration is found for the row.<br/>
+<p><b>bringAllProperties</b> (Optional): When set to false SearchList requests its data with a parameter (\"propertyList\") to indicate that it needs only a set of properties, to decrease the size of the data coming from server.<br/>
+<b>extraPropertiesToRequest</b> (Optional): Comma separated property names which will be added \"propertyList\" URL parameter. Active when bringAllProperties is set to false.<br/>
+<b>defaultFields</b> (Optional if showMax property is provided): Properties list that will be shown when no field configuration is found for the row.<br/>
 <b>showMax</b> (Optional): Maximum number of properties that will be displayed from the data. It overrides "defaultFields" and fields declarations.<br/>
 <b>maxRowsDisplayed</b> (Optional): The maximum row count requested from server at every poll. Default is 100.<br/>
 <b>defaultQuery</b> (Optional): The query appended to the all queries sent by SearchList.<br/>
