CMDB-1879   Implement FusionChart component and integrate with UiDesigner
git-svn-id: http://www.ifountain.org/repos/os/RapidModules@8966 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RapidUiPlugin/web-app/help/uidesigner/Components.html
+++ b/RapidUiPlugin/web-app/help/uidesigner/Components.html
@@ -12,7 +12,9 @@
 	<li><b>Add SearchList</b>: Adds a SearchList component: Search results are displayed in rows of adjustable height</li>
 	<li><b>Add TreeGrid</b>: Adds a TreeGrid component: Tree with columns for displaying additional data in one or more cells for each node</li>
 	<li><b>Add Html</b>: Adds an HTML component</li>
+	<li><b>Add FusionChart</b>: Adds a Fusion chart component</li>
 	<li><b>Add FlexPieChart</b>: Adds a Flex pie chart component</li>
+	<li><b>Add FlexLineChart</b>: Adds a Flex line chart component</li>
 	<li><b>Add PieChart</b>: Adds a pie chart component</li>
 	<li><b>Add ObjectMap</b>: Adds a map component to display objects in a diagram of connected nodes</li>
 	<li><b>Add Autocomplete</b>: Adds an autocomplete component</li>
