CMDB-1914   Html component should be configurable to disable javascript evaluation of the recevied content, to increase performance
git-svn-id: http://www.ifountain.org/repos/os/RapidModules@9068 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RapidUiPlugin/web-app/help/uidesigner/HTML Component.html
+++ b/RapidUiPlugin/web-app/help/uidesigner/HTML Component.html
@@ -13,7 +13,8 @@ Html is a UI component designed to display custom html content.</p>
 
 <p><b>pollingInterval</b> (Optional): Time delay between two server requests. Default is 0 which means there is no polling.<br/>
 <b>iframe</b> (Optional): Parameter to display the content in an iframe or embed it to Html component's body. Default is"false".<br/>
-<b>timeout</b> (Optional): The time interval in seconds to wait the server request completes successfully before aborting.</p>
+<b>timeout</b> (Optional): The time interval in seconds to wait the server request completes successfully before aborting.<br/>
+<b>evaluateScripts</b> (Optional): Boolean to evaluate scripts in the html content that the component displays.</p>
 
 <h4><a name="HTMLComponent-AvailableActions"></a>Available Actions</h4>
 
