Document updated for layout collapse
git-svn-id: http://www.ifountain.org/repos/os/RapidModules@9276 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RapidUiPlugin/web-app/help/uidesigner/Layout Panes - Center, Top, Bottom, Left, Right.html
+++ b/RapidUiPlugin/web-app/help/uidesigner/Layout Panes - Center, Top, Bottom, Left, Right.html
@@ -17,7 +17,8 @@ Layout panes are where UI components are placed. A sub layout can be added to ea
 <b>minWidth:</b> (Optional) The minimum width of unit when resizable property is set to "true". <ins>Available in Right and Left panes.</ins><br/>
 <b>maxWidth:</b> (Optional) The maximum width of unit when resizable property is set to "true". <ins>Available in Right and Left panes.</ins><br/>
 <b>minHeight:</b> (Optional) The minimum height of unit when resizable property is set to "true". <ins>Available in Top and Bottom panes.</ins><br/>
-<b>maxHeight:</b> (Optional) The maximum height of unit when resizable property is set to "true". <ins>Available in Top and Bottom panes.</ins></p>
+<b>maxHeight:</b> (Optional) The maximum height of unit when resizable property is set to "true". <ins>Available in Top and Bottom panes.</ins><br/>
+<b>collapse:</b> (Optional) Boolean incidcationg whether the unit is collapsible or not. <ins>Available in Right, Left, Top and Bottom panes.</ins></p>
 
 <h4><a name="LayoutPanes-Center%2CTop%2CBottom%2CLeft%2CRight-AvailableActions"></a>Available Actions</h4>
 
